# django_app3

./: .gitignore
01_IntroductionToWebFrameworks/: simple_http_server.py
01_IntroductionToWebFrameworks/todo/: db.sqlite3
01_IntroductionToWebFrameworks/todo/tasks/: views.py
02_IntroductionToDjango/board/advertisement/: urls.py  views.py
02_IntroductionToDjango/board/board/: settings.py
03_RequestsHandlingInDjango/board/advertisements/: urls.py  views.py
03_RequestsHandlingInDjango/board/board/: settings.py
04_DatabasesAndModels/board/advertisements/: admin.py  models.py  urls.py  views.py
05_Forms/news/app_news/: forms.py  models.py  urls.py  views.py
10_Testing/djtesting/app_users/: urls.py
10_Testing/djtesting/djtesting/: settings.py  urls.py
10_Testing/djtesting/myauth/: tests.py  urls.py  views.py
10_Testing/djtesting/shopapp/: models.py  tests.py  views.py
Django_Cache/mysite/myauth/: views.py
Django_Cache/mysite/mysite/: settings.py
Django_Cache/mysite/shopapp/: urls.py  views.py
Docs/: requirements.txt
Docs/mysite/mysite/: settings.py
Docs/mysite/shopapp/: forms.py  models.py  views.py
M_04_DjangoAdmin/shop/shop/: settings.py  urls.py
M_04_DjangoAdmin/shop/shopapp/: admin.py  models.py  urls.py
M_07_CBV/mysite/shopapp/: forms.py  urls.py  (+1 more)
M_11_Files/: requirements.txt
import_export/: devices.csv
logging/: Dockerfile  docker-compose.yaml  requirements.txt
logging/mysite/: demo.py  log.txt  log.txt.1
prod/: docker-compose.yaml  pyproject.toml  requirements.txt
prod/mysite/mysite/: settings.py
queries/: queries.sql
(+109 files in other folders)
